@@ -1,3 +1,7 @@
+1998-10-21  Marcus G. Daniels  <mgd@sangre.santafe.edu>
+
+	* dropdir.c (dropdir): Return NULL if passed as an argument.
+
 1998-10-10  Marcus G. Daniels  <mgd@sangre.santafe.edu>
 
 	* Makefile.am (CURRENT,AGE): Increment. Swarm 1.3.1 released.
